@@ -3670,7 +3670,7 @@ static const struct battle_data_short {
 	{ "max_exp_gain_rate",                 &battle_config.max_exp_gain_rate	}, // [Skotlex]
 	{ "backstab_bow_penalty",              &battle_config.backstab_bow_penalty	},
 	{ "night_at_start",                    &battle_config.night_at_start	}, // added by [Yor]
-	{ "show_mob_hp",                       &battle_config.show_mob_hp	}, // [Valaris]
+	{ "show_mob_info",                     &battle_config.show_mob_info }, // [Valaris]
 	{ "ban_spoof_namer",                   &battle_config.ban_spoof_namer	}, // added by [Yor]
 	{ "hack_info_GM_level",                &battle_config.hack_info_GM_level	}, // added by [Yor]
 	{ "any_warp_GM_min_level",             &battle_config.any_warp_GM_min_level	}, // added by [Yor]
@@ -4103,7 +4103,7 @@ void battle_set_defaults() {
 	battle_config.night_at_start = 0; // added by [Yor]
 	battle_config.day_duration = 2*60*60*1000; // added by [Yor] (2 hours)
 	battle_config.night_duration = 30*60*1000; // added by [Yor] (30 minutes)
-	battle_config.show_mob_hp = 0; // [Valaris]
+	battle_config.show_mob_info = 0;
 	battle_config.ban_spoof_namer = 5; // added by [Yor] (default: 5 minutes)
 	battle_config.hack_info_GM_level = 60; // added by [Yor] (default: 60, GM level)
 	battle_config.any_warp_GM_min_level = 20; // added by [Yor]
